// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DefaultItemAction render - button 1`] = `
<EuiToolTip
  content="action 1"
  delay="long"
  display="inlineBlock"
  position="top"
>
  <EuiButtonEmpty
    color="primary"
    flush="right"
    isDisabled={false}
    onClick={[Function]}
    size="s"
  >
    action1
  </EuiButtonEmpty>
</EuiToolTip>
`;

exports[`DefaultItemAction render - default button 1`] = `
<EuiToolTip
  content="action 1"
  delay="long"
  display="inlineBlock"
  position="top"
>
  <EuiButtonEmpty
    color="primary"
    flush="right"
    isDisabled={false}
    onClick={[Function]}
    size="s"
  >
    action1
  </EuiButtonEmpty>
</EuiToolTip>
`;

exports[`DefaultItemAction render - icon 1`] = `
<EuiToolTip
  content="action 1"
  delay="long"
  display="inlineBlock"
  position="top"
>
  <EuiButtonIcon
    aria-labelledby="generated-id"
    color="primary"
    iconType="trash"
    isDisabled={false}
    onClick={[Function]}
  />
  <EuiScreenReaderOnly>
    <span
      id="generated-id"
    >
      <span>
        action1
      </span>
    </span>
  </EuiScreenReaderOnly>
</EuiToolTip>
`;

exports[`DefaultItemAction render - name 1`] = `
<EuiToolTip
  content="action 1"
  delay="long"
  display="inlineBlock"
  position="top"
>
  <EuiButtonEmpty
    color="primary"
    flush="right"
    isDisabled={false}
    onClick={[Function]}
    size="s"
  >
    <span>
      xyz
    </span>
  </EuiButtonEmpty>
</EuiToolTip>
`;
